fixed message overflow and added alerts for not configured buttons

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -13,6 +13,19 @@
   -ms-overflow-style: none;
 }
 
+h2.noChatSelected {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: xx-large;
+}
+
+.fas {
+  margin-right: 12px;
+}
+
 .chat__messages::-webkit-scrollbar {
   display: none;
 }
