--- a/src/ChatHeader.css
+++ b/src/ChatHeader.css
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   flex: 0.5;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .chatHeader__right > .MuiSvgIcon-root {
@@ -39,15 +39,6 @@
 
 .chatHeader__right > .MuiSvgIcon-root:hover {
   color: white;
-}
-
-.chatHeader__search {
-  display: flex;
-  align-items: center;
-  color: gray;
-  background-color: #2f3135;
-  border-radius: 3px;
-  padding: 3px;
 }
 
 .chatHeader__search > input {
