--- a/src/Message.css
+++ b/src/Message.css
@@ -3,6 +3,7 @@
   align-items: center;
   padding: 20px;
   color: white;
+  overflow-wrap: anywhere;
 }
 
 .message__info {
